# multi_robot_packing_task

./: .gitmodules  README.md
img_adapter/: package.xml  setup.cfg  setup.py
img_adapter/img_adapter/: gqcnn_caller_node.py  img_adapter_node.py
objects_model/: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
objects_model/scene_objects/: blue_bin_original.STL  blue_bin_thicker.STL  two_bins.scene  two_bins_no_mesh.scene  two_bins_thicker.scene  two_bins_thicker_witl_wall.scene
objects_model/urdf/: obj_box.stl  obj_box_with_groove.stl
task_msgs/: CMakeLists.txt  package.xml
task_msgs/action/: RoadmapSampler.action
task_msgs/msg/: FlatVoxel.msg  RotationRange.msg
task_msgs/srv/: GQCNNGraspPlanner.srv  GetPlannedTraj.srv  PackingPlanning.srv  RoadmapSampleConfig.srv
